<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_270"
    android:background="@color/white"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/rg_choice_garden"
        android:layout_width="@dimen/dp_88"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_garden_all"
            style="@style/checkBox_home_pop"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/rb_garden_primary"

            style="@style/checkBox_home_pop"
            android:text="@string/primary_garden" />

        <RadioButton
            android:id="@+id/rb_garden_middle"
            style="@style/checkBox_home_pop"
            android:text="@string/middle_garden" />

        <RadioButton
            android:id="@+id/rb_garden_high"
            style="@style/checkBox_home_pop"
            android:text="@string/high_garden" />
    </RadioGroup>

    <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_270"

        android:background="@color/FBFBFB" />

    <com.haoke91.baselibrary.recycleview.WrapRecyclerView
        android:id="@+id/rv_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:overScrollMode="never" />
</LinearLayout>
