<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_all_course"
            style="@style/textView_classify_course"
            android:gravity="center"
            android:text="@string/all_garden" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_all_garden"
            style="@style/textView_classify_course"
            android:text="@string/all_course" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_all_classify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_all_classify"

            style="@style/textView_classify_course"
            android:text="@string/all_classify" />
    </FrameLayout>
</LinearLayout>
