<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:fitsSystemWindows="true">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="center"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/setting" />-->
    <!--</android.support.v7.widget.Toolbar>-->
    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:id="@+id/rl_go_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52">

        <TextView
            style="@style/textView_setting_tittle"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/message_notice" />

        <TextView
            style="@style/textView_setting_tittle"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp_16"

            android:drawableRight="@drawable/ic_mine_icon_front"
            android:text="@string/go_open" />
    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52">

        <TextView
            style="@style/textView_setting_tittle"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/only_wifi" />

        <com.haoke91.a91edu.widget.SwitchButton
            android:id="@+id/sb_setting_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_16"
            app:kswBackColor="@color/ck_back_color"
            app:kswThumbColor="@color/white"
            app:kswTintColor="#999" />
    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52">

        <TextView
            style="@style/textView_setting_tittle"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/notice_3g" />

        <com.haoke91.a91edu.widget.SwitchButton
            android:id="@+id/sb_setting_3g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_16"
            app:kswBackColor="@color/ck_back_color"
            app:kswThumbColor="@color/white" />
    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:id="@+id/rl_setting_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52">

        <TextView
            style="@style/textView_setting_tittle"

            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/clear_cache" />

        <TextView
            android:id="@+id/tv_setting_cache_size"
            style="@style/textView_setting_tittle"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp_16"
            tools:text="1.2g" />

    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:visibility="gone">

        <TextView
            style="@style/textView_setting_tittle"

            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/comment_us" />

        <ImageView
            style="@style/textView_setting_tittle"

            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_mine_icon_front" />

    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:id="@+id/rl_setting_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52">

        <TextView
            style="@style/textView_setting_tittle"

            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/about_us" />

        <ImageView
            style="@style/textView_setting_tittle"

            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_mine_icon_front" />

    </RelativeLayout>

    <View style="@style/line" />

    <RelativeLayout
        android:id="@+id/rl_setting_loginOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            style="@style/textView_setting_tittle"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/login_out"
            android:textColor="@color/color_75C82B" />


    </RelativeLayout>
</LinearLayout>
