<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:padding="@dimen/dp_3"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shopping_cart"
            android:textColor="@color/color_181818"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:id="@+id/tv_cart_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/edit"
            android:textColor="@color/color_636363"
            android:textSize="@dimen/dp_14" />
    </android.support.v7.widget.Toolbar>

    <com.haoke91.baselibrary.views.emptyview.EmptyView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_cart_bottom"
        android:layout_below="@+id/toolbar"
        app:ev_empty_button="@string/shopping_cart_empty"
        app:ev_empty_drawable="@mipmap/empty_image"
        app:ev_error_drawable="@mipmap/net_error"
        app:ev_error_text="@string/net_error">

        <com.haoke91.baselibrary.recycleview.WrapRecyclerView
            android:id="@+id/wr_cart_order_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_cart_bottom"
            android:layout_below="@+id/toolbar"
            android:overScrollMode="never" />
    </com.haoke91.baselibrary.views.emptyview.EmptyView>

    <RelativeLayout
        android:id="@+id/rl_cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_white_radius_4"
        android:elevation="@dimen/dp_4">


        <CheckBox
            android:id="@+id/cb_cart_choice_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@drawable/selector_checkbox_green"
            android:button="@null" />

        <TextView
            android:id="@+id/tv_choice_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toRightOf="@+id/cb_cart_choice_all"
            android:text="@string/all_choice"
            android:textColor="@color/FF4F00"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:id="@+id/tv_cart_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_choice_all"
            android:text="@string/all_price" />

        <TextView
            android:id="@+id/tv_total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_toRightOf="@+id/tv_cart_total"
            android:text="¥0"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/tv_cart_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cart_total"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_choice_all"
            android:textColor="@color/color_9B9B9B"
            android:textSize="@dimen/dp_12"
            android:visibility="gone"
            tool:text="@string/cart_save" />

        <TextView
            android:id="@+id/tv_cart_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_pay"
            android:paddingBottom="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_27"
            android:paddingRight="@dimen/dp_27"
            android:paddingTop="@dimen/dp_4"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:id="@+id/tv_cart_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/line_ff4f0_radius_18"
            android:paddingBottom="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_27"
            android:paddingRight="@dimen/dp_27"
            android:paddingTop="@dimen/dp_4"
            android:text="@string/delete"
            android:textColor="@color/FF4F00"
            android:textSize="@dimen/dp_12"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cart_delete_invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_toLeftOf="@+id/tv_cart_delete"
            android:background="@drawable/line_f89a00_radius_18"
            android:paddingBottom="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_4"
            android:text="清空失效课程"
            android:textColor="@color/F89A00"
            android:textSize="@dimen/dp_12"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
