<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/tv_address_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLength="15"
        android:maxWidth="@dimen/dp_120"
        android:singleLine="true"
        android:textColor="@color/color_363636"
        android:textSize="@dimen/dp_14"
        android:textStyle="bold"
        tool:text="阿萨阿萨阿萨阿萨阿萨阿萨阿萨阿11" />

    <TextView
        android:id="@+id/tv_address_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:background="@null"
        android:textColor="@color/color_363636"
        android:textSize="@dimen/dp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_address_name"
        tool:text="18518635770" />

    <TextView
        android:id="@+id/tv_address_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_7"
        android:textColor="@color/color_363636"
        android:textSize="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_name"
        tool:text="ssssssssssssssssssssssssssssssssssssssssssss" />

    <!--<View-->
    <!--style="@style/line"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/tv_address_detail" />-->

    <ImageView
        android:id="@+id/ck_address_default"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_17"
        android:background="@drawable/selector_checkbox_green"
        android:button="@null"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_address_detail" />

    <TextView
        android:id="@+id/tv_setDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/default_address"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="@+id/ck_address_default"
        app:layout_constraintStart_toEndOf="@id/ck_address_default"
        app:layout_constraintTop_toTopOf="@+id/ck_address_default" />
    //4610

    <TextView
        android:id="@+id/tv_address_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/delete"
        android:textColor="@color/color_979797"
        android:textSize="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="@+id/tv_setDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_setDefault" />

    <TextView
        android:id="@+id/tv_address_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/edit"
        android:textColor="@color/color_979797"
        android:textSize="@dimen/dp_12"

        app:layout_constraintEnd_toStartOf="@+id/tv_address_delete"
        app:layout_constraintTop_toTopOf="@+id/tv_address_delete" />
</android.support.constraint.ConstraintLayout>
